force-app/main/default/objects/Position__c/Position__c.object-meta.xml
<CustomObject>
    <label>役職</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>職位申請表番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>