force-app/main/default/objects/Position__c/fields/aaaaddd__c.field-meta.xml
<CustomField>
    <fullName>aaaaddd__c</fullName>
    <label>aaaaddd</label>
    <length>3</length>
    <type>Text</type>
</CustomField>