force-app/main/default/objects/Position__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <label>終了年月日</label>
    <type>Date</type>
</CustomField>