force-app/main/default/objects/Position__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <formula>IF ( ISNULL( Close_Date__c ) , TODAY()  -   Open_Date__c ,  Close_Date__c   -   Open_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>役職の欠員時間</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>