force-app/main/default/objects/Position__c/fields/Educational_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Educational_Requirements__c</fullName>
    <label>教育</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>