force-app/main/default/objects/Position__c/fields/Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area__c</fullName>
    <label>機能分野</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>金融</fullName>
            </value>
            <value>
                <fullName>科学</fullName>
            </value>
            <value>
                <fullName>通信</fullName>
            </value>
            <value>
                <fullName>オペレーション</fullName>
            </value>
            <value>
                <fullName>倉庫</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>