force-app/main/default/objects/Position__c/fields/Hire_By__c.field-meta.xml
<CustomField>
    <fullName>Hire_By__c</fullName>
    <label>役職有効年月日</label>
    <type>Date</type>
</CustomField>