force-app/main/default/objects/Position__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>招聘マネジャー</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User</relationshipName>
    <type>Lookup</type>
</CustomField>