force-app/main/default/objects/Position__c/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <label>仕事のレベル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>金融1級</fullName>
            </value>
            <value>
                <fullName>金融2級</fullName>
            </value>
            <value>
                <fullName>金融3級</fullName>
            </value>
            <value>
                <fullName>科学1級</fullName>
            </value>
            <value>
                <fullName>科学2級</fullName>
            </value>
            <value>
                <fullName>科学3級</fullName>
            </value>
            <value>
                <fullName>通信1級</fullName>
            </value>
            <value>
                <fullName>通信2級</fullName>
            </value>
            <value>
                <fullName>通信3級</fullName>
            </value>
            <value>
                <fullName>オペレーション1級</fullName>
            </value>
            <value>
                <fullName>オペレーション2級</fullName>
            </value>
            <value>
                <fullName>オペレーション3級</fullName>
            </value>
            <value>
                <fullName>倉庫1級</fullName>
            </value>
            <value>
                <fullName>倉庫2級</fullName>
            </value>
            <value>
                <fullName>倉庫3級</fullName>
            </value>
            <value>
                <fullName>その他1級</fullName>
            </value>
            <value>
                <fullName>その他2級</fullName>
            </value>
            <value>
                <fullName>その他3級</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>