force-app/main/default/objects/Position__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>位置</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>横浜</fullName>
            </value>
            <value>
                <fullName>千葉</fullName>
            </value>
            <value>
                <fullName>東京</fullName>
            </value>
            <value>
                <fullName>足立区</fullName>
            </value>
            <value>
                <fullName>埼玉</fullName>
            </value>
            <value>
                <fullName>王子</fullName>
            </value>
            <value>
                <fullName>赤羽</fullName>
            </value>
            <value>
                <fullName>池袋</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>