force-app/main/default/objects/Position__c/fields/Salsesforce__c.field-meta.xml
<CustomField>
    <fullName>Salsesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salsesforce</label>
    <type>Checkbox</type>
</CustomField>