force-app/main/default/objects/Position__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新しい役職</fullName>
            </value>
            <value>
                <fullName>承認待ち</fullName>
            </value>
            <value>
                <fullName>承認</fullName>
            </value>
            <value>
                <fullName>終了（募集済み）</fullName>
            </value>
            <value>
                <fullName>終了（拒否）</fullName>
            </value>
            <value>
                <fullName>終了（キャンセル）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>