force-app/main/default/objects/Position__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>契約形態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>フルタイム</fullName>
            </value>
            <value>
                <fullName>アルバイト</fullName>
            </value>
            <value>
                <fullName>研修</fullName>
            </value>
            <value>
                <fullName>請負業者</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>