force-app/main/default/objects/Position__c/validationRules/CloseDateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>CloseDateCheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(Status__c, &quot;終了（募集済み）&quot;),ISPICKVAL(Status__c, &quot;終了（拒否）&quot;) ), ISBLANK(Close_Date__c))</errorConditionFormula>
    <errorMessage>終了年月日を入力してください</errorMessage>
</ValidationRule>