force-app/main/default/objects/Position__c/validationRules/KingakuMinMax.validationRule-meta.xml
<ValidationRule>
    <fullName>KingakuMinMax</fullName>
    <active>true</active>
    <errorConditionFormula>Min_Pay__c  &gt;  Max_Pay__c</errorConditionFormula>
    <errorMessage>給与下限が上限を超えています。</errorMessage>
</ValidationRule>