force-app/main/default/objects/Position__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apex__c</columns>
    <columns>Java__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>